<resources>
    <string name="app_name">MPlace</string>

    <!-- Main Activity -->
    <string name="main_title">My Favorite Places</string>
    <string name="action_logcat">Logcat</string>

    <!-- List -->
    <string name="item_image_content">Default List Image</string>

    <!-- Categories -->
    <string name="nav_place">Place</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_cafe">Cafe</string>
    <string name="nav_picnic">Picnic</string>
    <string name="nav_favorite">Favorite</string>

    <!-- Edit Activity -->
    <string name="edit_title">Modify Place</string>
    <string name="edit_category_prompt">Select Category</string>
    <string name="edit_name">Name</string>
    <string name="edit_description">Info</string>
    <string name="edit_action_done">Done</string>
    <string name="edit_image_content">Image Holder</string>

    <!-- View Activity -->
    <string name="view_action_edit">Edit</string>
    <string name="view_action_delete">Delete</string>
    <string name="view_image_content">Image Holder</string>

    <!-- Logcat Activity -->
    <string name="logcat_title">Logcat</string>
    <string name="action_clear">Clear Log</string>
    <string name="l_nav_header">Logcat levels</string>
    <string name="l_nav_all">All</string>
    <string name="l_nav_verbose">Verbose</string>
    <string name="l_nav_debug">Debug</string>
    <string name="l_nav_info">Info</string>
    <string name="l_nav_warn">Warn</string>
    <string name="l_nav_error">Error</string>
    <string name="l_nav_assert">Assert</string>

</resources>
