<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_place"
            android:icon="@drawable/ic_place_white_24dp"
            android:title="@string/nav_place" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shopping_cart_white_24dp"
            android:title="@string/nav_shop" />
        <item
            android:id="@+id/nav_cafe"
            android:icon="@drawable/ic_av_timer_white_24dp"
            android:title="@string/nav_cafe" />
        <item
            android:id="@+id/nav_picnic"
            android:icon="@drawable/ic_filter_vintage_white_24dp"
            android:title="@string/nav_picnic" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_favorite" />
    </group>

</menu>