<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/edit_location_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:paddingTop="8dp"
        android:scaleType="center"
        android:src="@drawable/ic_location_on_black_24dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/edit_location_image"
        android:hint="@string/edit_name"
        android:imeOptions="actionNext"
        android:inputType="textShortMessage" />

    <Spinner
        android:id="@+id/edit_category"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edit_name"
        android:layout_below="@id/edit_name"
        android:layout_marginTop="8dp"
        android:drawSelectorOnTop="true"
        android:paddingTop="4dp"
        android:prompt="@string/edit_category_prompt" />

    <ImageView
        android:id="@+id/card_info_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_category"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:scaleType="center"
        android:src="@drawable/ic_info_outline_black_24dp" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edit_category"
        android:layout_below="@id/edit_category"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_description"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine" />

</RelativeLayout>