<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.org.adons.mplace.edit.EditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_photo_camera_white_48dp"
            app:borderWidth="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="26dp">

        <TextView
            android:id="@+id/edit_category_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/edit_category"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/edit_category"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_toEndOf="@id/edit_category_caption"
            android:layout_toRightOf="@id/edit_category_caption"
            android:drawSelectorOnTop="true"
            android:prompt="@string/edit_category_prompt" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_category"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_name"
                android:imeOptions="actionNext"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_input_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/edit_input_name">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_description"
                android:imeOptions="actionDone"
                android:inputType="textLongMessage" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</LinearLayout>